# Academic-Rag-Assistant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  nginx.conf  pyproject.toml
configs/: config.yaml
src/: __init__.py  rag_pipeline.py
src/core/: __init__.py  vector_database_module.py
src/core/abstractions/: __init__.py  chunking_strategy.py  embedding_strategy.py  text_cleaner_strategy.py  vector_repository_strategy.py
src/core/factories/: __init__.py  chunking_factory.py  cleaner_factory.py  embedding_factory.py  vector_repository_factory.py
src/implementations/: __init__.py
src/implementations/chunking/: __init__.py  logical_chunking_strategies.py
src/implementations/embedding/: __init__.py  embedder.py  huggingface_embedder.py  query_embedding.py
src/implementations/llm/: llm_service.py
src/implementations/preprocessing/: __init__.py  german_text_cleaning_strategies.py
src/implementations/retriever/: hybrid_retriever.py
src/implementations/vector_db/: __init__.py  chroma_repository.py  vector_database_service.py
src/inference/: __init__.py  streamlit_ui.py
src/ingestion/: __init__.py  pdf_loader.py
src/preprocessing/: __init__.py  chunker.py  text_cleaner.py
src/rag/: __init__.py  retriever.py
src/services/: __init__.py  llm_service.py  rag_service.py
src/utils/: __init__.py  config_parser.py  embedding_cache.py  logger.py  performance_monitor.py  response_cache.py
tests/: __init__.py  test_chunker.py  test_embedder.py  test_llm_service.py  test_pdf_loader.py  test_rag_pipeline.py  test_retriever.py  test_text_cleaner.py  test_vectordb.py
