[project]
name = "academic-assistant-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Hasan Kirtas",email = "hksann985@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pdfplumber (>=0.11.7,<0.12.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
