[project]
name = "academic-assistant-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Hasan Kirtas", email = "hksann985@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pdfplumber >=0.11.7,<0.12.0",
    "fpdf >=1.7.2,<2.0.0",
    "pytest >=8.4,<9.0",
    "PyYAML >=6.0,<7.0",
    "spacy >=3.8,<4.0",
    "torch >=2.0,<3.0",
    "transformers >=4.35,<5.0",
    "numpy >=1.26,<2.0",
    "chromadb >=0.4.0,<0.5.0",
    "sentence-transformers >=2.2.0,<3.0.0",
    "accelerate >=0.20.0,<1.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"