[tool.poetry]
name = "academic-rag-assistant"
version = "0.1.0"
authors = ["Hasan Kırtaş hksann985@outlook.com"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.0"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.11.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
requests = "^2.32.3"
pydantic = "^2.9.0"
loguru = "^0.7.2"
chromadb = "^0.5.4"
sentence-transformers = "^3.0.1"
python-docx = "^1.1.2"
pyyaml = "^6.0.2"
fpdf = "^1.7.2"
torch = "^2.3.1"
spacy = "^3.7.0"
de-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0-py3-none-any.whl"}
openai = "^1.51.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
